--- a/buttonfollow/index.html
+++ b/buttonfollow/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>H5鼠标跟随指针移动动画 - 代码库</title>
+	<title></title>
 </head>
 
 <body>
