--- a/christmas/index.html
+++ b/christmas/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>CSS3彩带圣诞树旋转动画特效 - 站长素材</title>
+<title></title>
 
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 
