--- a/heartbeat/index.html
+++ b/heartbeat/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 <meta charset="UTF-8">
-<title>H5彩色心跳粒子动画特效 - 站长素材</title>
+<title></title>
 
 <link rel="stylesheet" href="css/style.css">
 
