--- a/loadingcoil/index.html
+++ b/loadingcoil/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>Code代码编辑 - Eon面板</title>
+		<title></title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 		<link rel="icon" href="https://pan.xvx88.cn/d/EonCode/Logo/HoMe/HoMex.ico?pw=7ea674bc7a7f743d" />
 		<link rel="stylesheet" href="./style.css">
