--- a/submarine/index.html
+++ b/submarine/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Submarine Animation (Pure CSS)</title>
+  <title></title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
