remove buttonfly as js trail

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
   <meta name="author" content="Swarup Kumar">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
   <style>
-    .card-body {
-      background-color: rgba(255, 255, 255, 0.9) !important;
-      backdrop-filter: blur(5px);
-    }
     .nav-link {
       color: rgba(0, 0, 0, 0.6) !important;
       transition: color 0.3s ease;
@@ -131,7 +127,7 @@
 <path id="Vector_70" opacity="0.25" d="M572.4 184.6C571 187.2 569.2 188.5 569.2 188.5C569.2 188.5 567.6 179.9 567.1 179.1C566.7 178.4 567.3 177.8 568.2 180.7C568.9 183 570.7 184.7 572.3 184.3C572.4 184.3 572.4 184.4 572.4 184.6Z" fill="black"/>
 <path id="Vector_71" opacity="0.25" d="M569.5 199.1C569.4 199.2 569.2 199.3 569 199.4C567.5 200.1 563.7 200.1 559.8 199.9C562.4 199.6 568.7 198.2 569.8 192.7C570.1 195.2 570.3 198.2 569.5 199.1Z" fill="black"/>
 <path id="Vector_72" opacity="0.25" d="M562 170.2C561.7 170.6 561.1 170.8 560.1 170.6C558.2 170.2 555.7 171 554.5 170.8C553.8 170.7 553.4 170.5 553.1 170.3C555.8 169.3 558.1 169.4 558.1 169.4C559.4 169.4 560.7 169.7 562 170.2Z" fill="black"/>
-<path id="Vector_73" d="M548.7 190C548 190.9 547.2 192 546.3 193.1C544.4 192 542.9 190 542 188.8C542.8 187.4 543.6 185.7 544 184.9C544.5 185.7 545.3 186.6 546.2 187.5C547.2 188.8 548.2 189.8 548.7 190Z" fill="#2F1829"/>
+<path id="Vector_73" d="M548.7 190C548 190.9 547.2 192 546.3 193.1C544.4 192 542.9 190 542 188.8C542.8 187.4 543.6 185.7 544 184.9C544.5 185.7 545.3 186.7 546.2 187.6C547.2 188.8 548.2 189.8 548.7 190Z" fill="#2F1829"/>
 <path id="Vector_74" opacity="0.25" d="M548.7 190C548 190.9 547.2 192 546.3 193.1C546 193.5 545.6 193.9 545.3 194.3C545.4 190.8 544.2 187.7 543.5 186.1C543.7 185.6 543.9 185.2 544.1 184.9C544.6 185.7 545.4 186.7 546.3 187.6C547.2 188.8 548.2 189.8 548.7 190Z" fill="black"/>
 <path id="Vector_75" opacity="0.25" d="M542.7 187.6C542.7 188.6 541.7 190.1 541.5 190.5C541.2 191 541.4 193.3 541.1 193C540.8 192.7 540.7 191.6 540.3 191.2C539.9 190.9 535.3 189.7 534.5 189.5C536.8 190 540.2 191.1 540.7 190.8C541 190.7 541.5 189.8 542.1 188.7C542.3 188.5 542.5 188.1 542.7 187.6Z" fill="white"/>
 <path id="Vector_76" opacity="0.25" d="M561.7 166.2C561.2 167.1 560.4 168 559.7 168.6C559.1 169 558.6 169.3 558.2 169.3C556.9 169.1 555.2 166.9 555.1 166.5C555.1 166.1 556.5 165.9 556.4 164.7C556.2 163.5 555.4 163.3 554.9 163.5C554.3 163.7 553.6 165 553.6 166.2C553.2 166.1 552.5 164.7 551.1 163.8C550.7 163.6 550.3 163.4 549.8 163.3C550.5 163.2 551.4 163.2 551.9 163.4C553.1 163.9 553.2 164.4 553.2 164.4C553.2 164.4 553.4 162.6 555.4 162.2C557.1 161.9 558.4 166.5 561.7 166.2Z" fill="black"/>
@@ -266,7 +262,6 @@
 </g>
 </g>
 </g>
-</g>
 </svg>
     </div>
   </div>
@@ -281,9 +276,9 @@
           <div class="card-body">
             <h5 class="card-title">3D Projects</h5>
             <ul class="list-unstyled">
-              <li><a href="3dview" class="nav-link text-decoration-none">3D View</a></li>
-              <li><a href="aircraft" class="nav-link text-decoration-none">Aircraft</a></li>
-              <li><a href="submarine" class="nav-link text-decoration-none">Submarine</a></li>
+              <li><a href="3dview" class="text-decoration-none">3D View</a></li>
+              <li><a href="aircraft" class="text-decoration-none">Aircraft</a></li>
+              <li><a href="submarine" class="text-decoration-none">Submarine</a></li>
             </ul>
           </div>
         </div>
@@ -293,11 +288,10 @@
           <div class="card-body">
             <h5 class="card-title">Interactive Projects</h5>
             <ul class="list-unstyled">
-              <li><a href="buttonfly" class="nav-link text-decoration-none">Button Fly</a></li>
-              <li><a href="buttonfollow" class="nav-link text-decoration-none">Button Follow</a></li>
-              <li><a href="clickcat" class="nav-link text-decoration-none">Click Cat</a></li>
-              <li><a href="loadingcoil" class="nav-link text-decoration-none">Loading Coil</a></li>
-              <li><a href="xigua" class="nav-link text-decoration-none">Xigua</a></li>
+              <li><a href="buttonfollow" class="text-decoration-none">Button Follow</a></li>
+              <li><a href="clickcat" class="text-decoration-none">Click Cat</a></li>
+              <li><a href="loadingcoil" class="text-decoration-none">Loading Coil</a></li>
+              <li><a href="xigua" class="text-decoration-none">Xigua</a></li>
             </ul>
           </div>
         </div>
@@ -307,12 +301,12 @@
           <div class="card-body">
             <h5 class="card-title">Special Projects</h5>
             <ul class="list-unstyled">
-              <li><a href="404Shiny" class="nav-link text-decoration-none">404 Shiny</a></li>
-              <li><a href="Compassclock" class="nav-link text-decoration-none">Compass Clock</a></li>
-              <li><a href="christmas" class="nav-link text-decoration-none">Christmas</a></li>
-              <li><a href="heartbeat" class="nav-link text-decoration-none">Heartbeat</a></li>
-              <li><a href="keyboard" class="nav-link text-decoration-none">Keyboard</a></li>
-              <li><a href="Ribbons" class="nav-link text-decoration-none">Ribbons</a></li>
+              <li><a href="404Shiny" class="text-decoration-none">404 Shiny</a></li>
+              <li><a href="Compassclock" class="text-decoration-none">Compass Clock</a></li>
+              <li><a href="christmas" class="text-decoration-none">Christmas</a></li>
+              <li><a href="heartbeat" class="text-decoration-none">Heartbeat</a></li>
+              <li><a href="keyboard" class="text-decoration-none">Keyboard</a></li>
+              <li><a href="Ribbons" class="text-decoration-none">Ribbons</a></li>
             </ul>
           </div>
         </div>
