adding snake games

--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
               <li><a href="clickcat" class="text-decoration-none">Click Cat</a></li>
               <li><a href="loadingcoil" class="text-decoration-none">Loading Coil</a></li>
               <li><a href="xigua" class="text-decoration-none">Xigua</a></li>
+              <li><a href="snake_game" class="text-decoration-none">Snake Game</a></li>
             </ul>
           </div>
         </div>
