adding custom ways

--- a/date-time/index.html
+++ b/date-time/index.html
@@ -16,5 +16,11 @@
         <!-- Results will be dynamically inserted here -->
     </div>
     <script src="script.js"></script>
+    <footer>
+        <p>
+            Made with ❤️ by xiuzhi.
+            <a href="https://ko-fi.com/xiuzhi" target="_blank" rel="noopener noreferrer">Buy me a coffee ☕️</a>
+        </p>
+    </footer>
 </body>
 </html>
