--- a/URL/index.html
+++ b/URL/index.html
@@ -30,5 +30,11 @@
     </div>
 
     <script src="script.js"></script>
+    <footer>
+        <p>
+            Made with ❤️ by xiuzhi.
+            <a href="https://ko-fi.com/xiuzhi" target="_blank" rel="noopener noreferrer">Buy me a coffee ☕️</a>
+        </p>
+    </footer>
 </body>
 </html>
