--- a/crontab-gen/index.html
+++ b/crontab-gen/index.html
@@ -47,5 +47,12 @@
     </div>
 
     <script src="script.js"></script>
+
+    <footer>
+        <p>
+            Made with ❤️ by xiuzhi.
+            <a href="https://ko-fi.com/xiuzhi" target="_blank" rel="noopener noreferrer">Buy me a coffee ☕️</a>
+        </p>
+    </footer>
 </body>
 </html>
