--- a/textdiff/index.html
+++ b/textdiff/index.html
@@ -23,5 +23,11 @@
         <div id="diff-right" class="diff-panel"></div>
     </div>
     <script src="script.js"></script>
+    <footer>
+        <p>
+            Made with ❤️ by xiuzhi.
+            <a href="https://ko-fi.com/xiuzhi" target="_blank" rel="noopener noreferrer">Buy me a coffee ☕️</a>
+        </p>
+    </footer>
 </body>
 </html>
